samples/_failures_safe/1761340573_5d132a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25046dbd.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_25046dbd.c:176:13: error: expected expression at end of input
  176 |             printf("Vertex %d: %d\n", i,
      |             ^~~~~~
./samples/SAFE/__tmp_25046dbd.c:176:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_25046dbd.c:176:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_25046dbd.c:176:13: error: expected declaration or statement at end of input
